# gnome-keyring

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.decl  NEWS  README  TODO  aes.h  aes_le.h  autogen.sh  beecrypt_compat.h  configure.ac  configure.in  file-format.txt  gnome-keyring-1-uninstalled.pc.in  gnome-keyring-1.0.pc.in  gnome-keyring-ask.c  gnome-keyring-daemon-file.c  gnome-keyring-daemon-io.c  gnome-keyring-daemon.c  gnome-keyring-daemon.h  gnome-keyring-private.h  gnome-keyring-proto.c  gnome-keyring-proto.h  gnome-keyring-utils.c  gnome-keyring.c  gnome-keyring.doap  gnome-keyring.h  keyring-intro.txt  list-keyrings.c  md5.c  meson.build  meson_options.txt  sha1.c  sha1.h  (+3 more)
common/: .gitignore  Makefile.am  gkr-async.c  gkr-async.h  gkr-buffer.c  gkr-buffer.h  gkr-cleanup.c  gkr-cleanup.h  gkr-crypto.c  gkr-crypto.h  gkr-daemon-util.c  gkr-daemon-util.h  gkr-dbus.c  gkr-dbus.h  gkr-id.c  gkr-id.h  gkr-location-watch.c  gkr-location-watch.h  gkr-location.c  gkr-location.h  gkr-secure-memory.c  gkr-secure-memory.h  gkr-unique.c  gkr-unique.h  gkr-unix-credentials.c  gkr-unix-credentials.h  gkr-unix-signal.c  gkr-unix-signal.h  gkr-wakeup.c  gkr-wakeup.h
cryptoki/: Makefile.am  gkr-cryptoki-calls.h  gkr-cryptoki-daemon-session.c  gkr-cryptoki-daemon-test.c  gkr-cryptoki-daemon.c  gkr-cryptoki-daemon.h  gkr-cryptoki-mechanisms.h  gkr-cryptoki-message.c  gkr-cryptoki-message.h  gkr-cryptoki-module-export.map  gkr-cryptoki-module.c
daemon/: .gitignore  Makefile.am  aes.c  aes_be.h  beecrypt_compat.h  gkd-capability.c  gkd-capability.h  gkd-glue.c  gkd-glue.h  gkd-main.c  gkd-main.h  gkd-pkcs11.c  gkd-pkcs11.h  gkd-test.c  gkd-test.h  gkd-util.c  gkd-util.h  gkr-daemon-dbus.c  gkr-daemon-io.c  gkr-daemon-ops.c  gkr-daemon-util.c  gkr-daemon-util.h  gkr-daemon.c  gkr-daemon.h  gnome-keyring-ask.c  gnome-keyring-daemon-dbus.c  gnome-keyring-daemon-file.c  gnome-keyring-daemon-io.c  gnome-keyring-daemon-ops.c  gnome-keyring-daemon.c  gnome-keyring-daemon.desktop.in  gnome-keyring-daemon.desktop.in.in  gnome-keyring-daemon.h  gnome-keyring-daemon.service.in  gnome-keyring-daemon.socket  gnome-keyring-gpg.desktop.in.in  gnome-keyring-pkcs11.desktop.in.in  gnome-keyring-secrets.desktop.in.in  gnome-keyring-ssh.desktop.in.in  gnome-keyring.portal  (+7 more)
docs/: Makefile.am  gnome-keyring-3.1  gnome-keyring-daemon.xml  gnome-keyring.xml  keyring-intro.txt  meson.build
egg/: .gitignore  Makefile.am  egg-armor.c  egg-armor.h  egg-asn1-defs.c  egg-asn1-defs.h  egg-asn1.c  egg-asn1.h  egg-asn1x.c  egg-asn1x.h  egg-buffer.c  egg-buffer.h  egg-byte-array.c  egg-byte-array.h  egg-bytes.c  egg-bytes.h  egg-cleanup.c  egg-cleanup.h  egg-dbus.c  egg-dbus.h  egg-decimal.c  egg-decimal.h  egg-dh.c  egg-dh.h  egg-dn.c  egg-dn.h  egg-entry-buffer.c  egg-error.h  egg-file-tracker.c  egg-file-tracker.h  egg-hex.c  egg-hex.h  egg-hkdf.c  egg-hkdf.h  egg-libgcrypt.c  egg-libgcrypt.h  egg-mkdtemp.c  egg-mkdtemp.h  egg-oid.c  egg-oid.h  (+41 more)
gck/: .gitignore  Makefile.am  gck-attributes.c  gck-call.c  gck-debug.c  gck-debug.h  gck-deprecated.h  gck-dump.c  gck-enum-types.h.template  gck-enumerator.c  gck-interaction.c  gck-misc.c  gck-mock.c  gck-mock.h  gck-module.c  gck-modules.c  gck-object.c  gck-password.c  gck-private.h  gck-session.c  gck-slot.c  gck-uri.c  gck.h  gck.pc.in  gck.symbols  pkcs11-trust-assertions.h  pkcs11.h
gcr/: .gitignore  Makefile.am  gcr-base.h  gcr-base.pc.in  gcr-base.symbols  gcr-callback-output-stream.c  gcr-callback-output-stream.h  gcr-certificate-basics-widget.c  gcr-certificate-basics-widget.glade  gcr-certificate-basics-widget.h  gcr-certificate-chain.c  gcr-certificate-chain.h  gcr-certificate-details-widget.c  gcr-certificate-details-widget.h  gcr-certificate-exporter.c  gcr-certificate-exporter.h  gcr-certificate-extensions.c  gcr-certificate-extensions.h  gcr-certificate-renderer.c  gcr-certificate-renderer.h  gcr-certificate-widget.c  gcr-certificate-widget.h  gcr-certificate.c  gcr-certificate.h  gcr-collection-model.c  gcr-collection-model.h  gcr-collection.c  gcr-collection.h  gcr-colons.c  gcr-colons.h  gcr-column.c  gcr-column.h  gcr-combo-selector.c  gcr-combo-selector.h  gcr-comparable.c  gcr-crypto-types.xml  gcr-debug.c  gcr-debug.h  gcr-deprecated-base.h  gcr-deprecated.h  (+114 more)
keyrings/: Makefile.am  gkr-keyring-binary.c  gkr-keyring-item.c  gkr-keyring-item.h  gkr-keyring-login.c  gkr-keyring-login.h  gkr-keyring-textual.c  gkr-keyring.c  gkr-keyring.h  gkr-keyrings-auto-unlock.c  gkr-keyrings-auto-unlock.h  gkr-keyrings.c  gkr-keyrings.h
pam/: .gitignore  Makefile.am  gkr-pam-client.c  gkr-pam-export.map  gkr-pam-module.c  gkr-pam-stubs.c  gkr-pam.h  meson.build  mock-pam.c  pam-gkr.map  test-pam.c
pk/: Makefile.am  gkr-pk-cert.c  gkr-pk-cert.h  gkr-pk-import.h  gkr-pk-index.c  gkr-pk-index.h  gkr-pk-manager.c  gkr-pk-netscape-trust.c  gkr-pk-netscape-trust.h  gkr-pk-object-manager.c  gkr-pk-object-manager.h  gkr-pk-object-storage.c  gkr-pk-object-storage.h  gkr-pk-object.c  gkr-pk-object.h  gkr-pk-places.h  gkr-pk-privkey.c  gkr-pk-privkey.h  gkr-pk-pubkey.c  gkr-pk-pubkey.h  gkr-pk-purpose.c  gkr-pk-purpose.h  gkr-pk-root-storage.c  gkr-pk-root-storage.h  gkr-pk-session-storage.c  gkr-pk-session.h  gkr-pk-storage.c  gkr-pk-storage.h  gkr-pk-util.c  gkr-pk-util.h
pkcs11/: .gitignore  Makefile.am  gkr-pkcs11-calls.h  gkr-pkcs11-daemon-session.c  gkr-pkcs11-daemon-test.c  gkr-pkcs11-daemon.c  gkr-pkcs11-daemon.h  gkr-pkcs11-dsa.c  gkr-pkcs11-dsa.h  gkr-pkcs11-mechanisms.h  gkr-pkcs11-message.c  gkr-pkcs11-message.h  gkr-pkcs11-module.c  gkr-pkcs11-rsa.c  gkr-pkcs11-rsa.h  meson.build  pkcs11-module.map  pkcs11g.h  pkcs11i.h  pkcs11n.h  pkcs11x.h
pkix/: Makefile.am  asn1-def-pkix.h  gkr-pkix-asn1.c  gkr-pkix-asn1.h  gkr-pkix-cert.c  gkr-pkix-cert.h  gkr-pkix-constants.h  gkr-pkix-der.c  gkr-pkix-der.h  gkr-pkix-marshal.list  gkr-pkix-openssl.c  gkr-pkix-openssl.h  gkr-pkix-parser.c  gkr-pkix-parser.h  gkr-pkix-pem.c  gkr-pkix-pem.h  gkr-pkix-serialize.c  gkr-pkix-serialize.h  gkr-pkix-types.h
(+1346 files in other folders)
